# sw_pr

./: README.md  gst-template_readme  t10_include_trees.xml
Common/: CMakeLists.txt  readme
Common/Compement/src/LOG/: printrunlog.cpp
Common/Compement/src/MQ/: ipc_mq.cpp  msg_def.cpp
Common/Compement/src/StateMachine/: state_machine.cpp
Common/Compement/src/Thread/: thread_attr.cpp
Common/Interfaces/include/Common/Interfaces/: comm_data_def.h  ipc_mq.h  memory_pool.h  msg_def.h  printrunlog.h  rbtree.h  rbtree_cpp.h  readme  state_machine.h  thread_attr.h
aiVoiceRecogize/: readme
algorithms_datastructures/: algorithms.docx  algorithms_datastructures.c  algorithms_datastructures.c.orig  stringParse.c  stringParse.c.orig
algorithms_datastructures/rbtree/: UnitTestMemoryPoolTest.c  memory_pool.c  memory_pool.h  rbtree.c
alsa_record/: alsa_record.c  alsa_record.h
behaviorTree/: readme
clog/: clog.c  clog.c.orig
compile/: CMakeList.txt.readme  readme
design_patterns/: C_implementation_object.c  C_implementation_object.c.orig  factory_op.c  factory_op.c.orig  readme
error/: error.txt
json/: UnitTestRapidjsonTest.cpp  UnitTestRapidjsonTest.cpp.orig  readme
json/cjson_sample/: CMakeLists.txt  UnitTestCJSON.c  cJSON.c  cJSON.h
json/rapidjson_sample_c++_parseJsonfile/: CMakeLists.txt  ConfigurationNode.cpp  ConfigurationNode.h  ConfigurationNodeTest.cpp  test.json  test_2.json
pcb_test/: bt_test.h  common.h  cpu_test.h  echo_audio_play_test.c  echo_audio_record_test.c  echo_audio_test.c  echo_bt_test.c  echo_cpu_test.c  echo_ddr_test.c  echo_discovery.c  echo_emmc_test.c  echo_key_test.c  echo_led_test.c  echo_pcbatest_server.c  echo_rotary_test.c  echo_rtc_test.c  echo_wlan_test.c  key_test.h  pcbatest_server.h  readme  rk_pcba_test_led.h  rtc_test.h  wlan_test.h  write_storage.c
pcb_test/cJSON/: cJSON.c  cJSON.h
pcb_test/rk_vendor_storage/: rk_vendor_storage.c  rk_vendor_storage.h
pcb_test/tinyalsa/: pcm.c  tinycap.c  tinyplay.c
pcb_test/uevent/: echo_uevent_detect.c
sharemem_sample/: CMakeLists.txt  UnitTestShareMem.c  UnitTestShareMem.c.orig  UnitTestShareMem_MMap_Read.c  UnitTestShareMem_MMap_Write.c  readme  sharemem_mmap.c  sharemem_mmap.h
sharemem_sample/local_ipc_data_share_memory/: CMakeLists.txt  UnitTestShareMem_MMap_Read.c  UnitTestShareMem_MMap_Write.c  local_ipc_data_share_memory.c  local_ipc_data_share_memory.h
socket/: socket_local.h  socket_local_client.c  socket_local_server.c  socket_loopback_server.c  socket_loopback_server.c.orig
tools/: git_use.txt  scp_use.txt  ubuntu.txt
